zope.testing Changelog
**********************

3.8.7 (unreleased)
==================

- Nothing changed yet.


3.8.6 (2009-12-23)
==================

- Added MANIFEST.in and reuploaded to fix broken 3.8.5 release on PyPI.


3.8.5 (2009-12-23)
==================

- Added DocFileSuite, DocTestSuite, debug_src and debug back BBB imports
  back into zope.testing.doctestunit; apparently many packages still import
  them from there!

- Made zope.testing.doctest and zope.testing.doctestunit emit deprecation
  warnings: use the stdlib doctest instead.


3.8.4 (2009-12-18)
==================

- Fixed missing imports and undefined variables reported by pyflakes,
  adding tests to exercise the blind spots.

- Cleaned up unused imports reported by pyflakes.

- Added two new options to generate randomly ordered list of tests and to
  select a specific order of tests.

- RENormalizing checkers can be combined via `` + `` now: ``checker1 +
checker2`` creates a checker with the transformations of both checkers.

- Test fixes for Python 2.7.

3.8.3 (2009-09-21)
==================

- Avoid a split() call or we get test failures when running from a directory
  with spaces in it.

- Fix testrunner behavior on Windows for -j2 (or greater) combined with -v
  (or greater).

3.8.2 (2009-09-15)
==================

- Removing hotshot profiler when using Python 2.6. That makes zope.testing
  compatible with Python 2.6


3.8.1 (2009-08-12)
==================

- Avoid hardcoding sys.argv[0] as script;
  allow, for instance, Zope 2's `bin/instance test` (LP#407916).

- Produce a clear error message when a subprocess doesn't follow the
  zope.testing.testrunner protocol (LP#407916).

- Do not unnecessarily squelch verbose output in a subprocess when there are
  not multiple subprocesses.

- Do not unnecessarily batch subprocess output, which can stymie automated and
  human processes for identifying hung tests.

- Include incremental output when there are multiple subprocesses and a