@@ -17,7 +17,7 @@ $Id: __init__.py 86232 2008-05-03 15:09:33Z ctheune $
 """
 
 import sys
-from zope.testing import doctest
+import doctest
 import zope.testing.testrunner.feature
 
 
